--- a/apps/blobbed.xyz/tsconfig.json
+++ b/apps/blobbed.xyz/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "extends": "../../tsconfig.json",
+  "include": ["**/*.ts", "**/*.tsx", "**/*.astro"],
   "compilerOptions": {
     "preserveSymlinks": true,
     "baseUrl": ".",
