--- a/apps/blobbed.xyz/package.json
+++ b/apps/blobbed.xyz/package.json
@@ -63,6 +63,7 @@
     "lodash.merge": "^4.6.2",
     "lucide-react": "^0.363.0",
     "next-themes": "^0.3.0",
+    "p-map": "^7.0.2",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
